# temporalgraphs

./: .gitignore  .gitmodules  BUGS  CMakeLists.txt  COPYING  README  README.md  arraysort.cc  arraysort.cpp  arraysort.h  benchmark2.cpp  create-old.cpp  create-set.cpp  create.cpp  download.sh  exp-query.cc  leaves.cc  mywtkdmatrix.h  sort.cc  stats.cc  test.cpp  test.input  tgs.cpp  tgs.h  timing.h  update.cc  vertices.cpp
cas/: Makefile  benchmark.cpp  create.cpp  exp-query.cpp  getsize.cpp  mywtmatrix.cpp  mywtmatrix.h  test.tgs  use.cpp
cdswrapper/: CMakeLists.txt
cdswrapper/src/: dummy.cc
cet/: Makefile  arraysort.cpp  arraysort.h  benchmark.cpp  benchmark2.cpp  exp-query.cpp  mywtkdmatrix.cpp  test.query  tgl.cpp  tgl.h  timing.h  use.cpp  vertices.cpp
cmake/: RemoveFlags.cmake
docs/: CNAME  index.html  index.md
include/: BitSequenceRRR.h
libcds/src/static/bitsequence/: BitSequenceRRR.cpp
libcqtree/: CMakeLists.txt  Make.helper.cmake  README
libcqtree/examples/: Makefile  mx2d.cc  prb2d.cc  test-w2.input
libcqtree/include/cdswrapper/: sdsl_bitvectors.h
libcqtree/src/: CompactQtree.cc  MXCompactQtree.cc  MXCompactQtree.h  PRB2CompactQtree.cc  PRBCompactQtree.h  bitvector.h  count_ops.h
libcqtree/test/: code_test.cc  point_test.cc  prb2_test.cc  prb_test.cc  test.cc  test2.input  test4.input  test5.input  test6.input
multidim/: CMakeLists.txt  TemporalGraph.cc  benchmark.cc  time.sh
tgdim/: CMakeLists.txt  TemporalGraph.h  allvertices.cc  create.cc  debug.h  space-echo.sh  space.sh  timing.h  vertices.cc
tgdim/cdswrapper/: CMakeLists.txt
tgdim/libcqtree/examples/: test-w.input  test7.input
tgdim/libcqtree/src/: CompactQtree.h  PRB2CompactQtree.h  PRBCompactQtree.cc  bitvector.cc  point.h  utils.cc  utils.h
tgdim/libcqtree/test/: mx_test.cc  test3.input
wtkdmatrix/: Makefile  README  input  symbols.cpp  symbols.h  test_wt.cpp  testsave  wavelet_kd_matrix.cpp  wavelet_kd_matrix.h  wtkdtest.h
wtmatrix/: Makefile  input  input2  test_wt.cpp  testsave  wavelet_matrix.cpp  wavelet_matrix.h  wttest.h
